fixed forgot password modal minor styling design on mobiles

--- a/src/Components/ForgotPasswordModal/forgotPasswordModal.scss
+++ b/src/Components/ForgotPasswordModal/forgotPasswordModal.scss
@@ -23,7 +23,6 @@
   background-image: linear-gradient(to bottom right, #363c5c, #2c283a);
   border-radius: 15px;
   color: white;
-  height: 40%;
   width: 50%;
   min-width: 400px;
   min-height: 25vh;
@@ -36,13 +35,14 @@
 }
 
 .closeButton {
+  position: relative;
   padding: 0.75rem;
   background-color: rgb(50, 228, 77);
   color: white;
   border: 2px solid black;
   border-radius: 10px;
   font-size: larger;
-  width: 50%;
+  width: 60%;
   max-width: 150px;
   min-width: fit-content;
   margin-bottom: 1rem;
@@ -99,6 +99,7 @@
   color: rgb(247, 54, 20);
   font-family: sans-serif;
   margin-block: 1rem;
+  min-height: 50px;
 }
 
 @media screen and (max-width: 480px) {
